@@ -2,16 +2,18 @@
 
 ![image-20211209175314552](第二章-kafka高级.assets/image-20211209175314552.png)
 
-> * Kafka 中消息是以 topic 进行分类的， 生产者生产消息，消费者消费消息，都是面向 topic的
+> * **Kafka 中消息是以 topic 进行归类的**， 生产者生产消息，消费者消费消息，都是面向 topic的
 >
 > * 如上，kafka有三个broker ，表名三个服务器组成kafka集群。
 > * kafka集群如何进行数据备份的？三个服务器，每个服务器中都有leader和follower，但是follower并不备份同一个服务器中leader的数据。如果备份了，这台服务器宕机，那么主从数据都丢失了。
-> * topic 是逻辑上的概念，而 partition 是物理上的概念，在磁盘中存储格式为topic-分区号，每个 partition 对应于一个 log 文件，该 log 文件中存储的就是 producer 生产的数据。 Producer 生产的数据会被不断追加到该
-> 	log 文件末端，且每条数据都有自己的 offset。 消费者组中的每个消费者， 都会实时记录自己消费到了哪个 offset，以便出错恢复时，从上次的位置继续消费。因此kafka可以保证一个区内生产和消费数据有序性，整个集群中就不能保证了。
+> * **topic 是逻辑上的概念，而 partition(分区) 是物理上的概念**，在磁盘中存储格式为topic-分区号，**每个 partition 对应于一个 log 文件**，该 log 文件中存储的就是 producer 生产的数据。 Producer 生产的数据会被不断追加到该log 文件末端，且每条数据都有自己的 offset，**同一主题下的不同分区包含的消息是不同的**。 消费者组中的每个消费者， 都会实时记录自己消费到了哪个 offset，以便出错恢复时，从上次的位置继续消费。offset 是消息在分区中的唯一标识，Kafka 通过它来保证消息在分区内的顺序性，不过 offset 并不跨越分区，也就是说，**Kafka 保证的是分区有序而不是主题有序。**
 
-1. 生产者创建了一个topic三个分区 【TopicA-partition0、TopicA-partition1、TopicA-partition2】
-2. 三个分区落在三个服务器上，每个服务器相互存储其他服务器leader的备份数据
-3. 消费者消费数据从leader中根据偏移量进行数据消费
+* topic和分区
+	* topic是逻辑上的概念，而 partition(分区) 是物理上的概念，分区是落在磁盘上的一个个log文件
+	* 一个topic可以有多个分区，而一个分区只能属于一个主题，并以  主题-分区命名
+	* 消息是追加的方法存储在log文件中，offset是消息在该分区的唯一表示，用来进行再次消费时的记录(类似于PC寄存器)，因此kafka只能保证分区中消息的顺序性，不能跨分区保证。
+	* 每一条消息发送到broker后，都会根据分区规则进行选择存储到哪个分区，如果分区规则设计合理那么就会均匀分布到各个分区
+	* 为何出现分区？如果一个主题只有一个log文件，那么该主题的性能瓶颈就是对应服务器的IO极限。如果有多个分区：一方面方便横向扩展，另一方面相当于分布式布局，提高了访问效率
 
 
 
@@ -19,11 +21,11 @@
 
 	![image-20211209181031514](第二章-kafka高级.assets/image-20211209181031514.png)
 
-	> 因为这里只有一个分区，即一台服务器，默认分区为0。
+	> 这里只有一个分区，默认分区为0。
 	>
 	> 创建了三个主题，对应的文件夹就是 topic-分区号。如上。
 
-* 每个topic 对应文件夹有如下内容
+* 每个topic-分区 对应文件夹有如下内容
 
 	![image-20211209181219853](第二章-kafka高级.assets/image-20211209181219853.png)
 
@@ -85,11 +87,11 @@
 ### 分区原因
 
 1. 方便在集群中扩展，每个 Partition 可以通过调整以适应它所在的机器，而一个 topic又可以有多个 Partition 组成，因此整个集群就可以适应任意大小的数据了；
-2. 可以提高并发，因为可以以 Partition 为单位读写了。
+2. 可以提高并发，一个主题有多个分区，可以以 Partition 为单位读写了。
 
 
 
-### 分区原则
+### 分区规则
 
 我们需要将 producer 发送的数据封装成一个 ProducerRecord 对象，提供了如下构造函数
 
@@ -98,6 +100,7 @@
 * 指明 partition 的情况下，直接将指明的值直接作为 partiton 值，将数据存储在该分区。
 * 没有指明 partition 值但有 key 的情况下，将 key 的 hash 值与 topic 的 partition数进行取余得到 partition 值；
 * 既没有 partition 值又没有 key 值的情况下，第一次调用时随机生成一个整数（后面每次调用在这个整数上自增），将这个值与 topic 可用的 partition 总数取余得到 partition值，也就是常说的 round-robin 算法
+* 也可以自定义分区规则
 
 
 
@@ -225,15 +228,46 @@ pull 模式不足之处是，如果 kafka 没有数据，消费者可能会陷�
 
 ## offset 的维护
 
-> 由于 consumer 在消费过程中可能会出现断电宕机等故障， consumer 恢复后，需要从故障前的位置的继续消费，所以 consumer 需要实时记录自己消费到了哪个 offset，以便故障恢复后继续消费。
+> 由于 consumer 在消费过程中可能会出现断电宕机等故障， consumer 恢复后，需要从故障前的位置的继续消费，**所以 consumer 需要实时记录自己消费到了哪个 offset，以便故障恢复后继续消费。**
 
 
 
-## kafka 消费者组案例
+## kafka 消费者组
+
+> 消费者组是为了解决【一些消费者不能共享消费消息，即一个消息只能由一个消费者消费】。例如订单数据只能处理一次，多个应用同时订阅主题就会被消费多次，如果这些应用加入到同一个消费者组，那么一个订单就只会分配给消费者组中的一个。
+
+1. **一个消费者只能属于一个消费者组**
+2. **消费者组订阅的topic只能被其中的一个消费者消费**
+3. **不同消费者组中的消费者可以消费同一个topic**
 
 
 
+### 举例
 
+1. 下面这种情况，消费组中的消费者消费主题中的所有分区。并且没有重复消费的可能
+
+![image-20211212122949552](第二章-kafka高级.assets/image-20211212122949552.png)
+
+
+
+2. 每个消费者分别从两个分区接收消息
+
+​		![image-20211212123209502](第二章-kafka高级.assets/image-20211212123209502.png)
+
+
+
+3. 每个消费者可以分配到一个分区
+
+​		![image-20211212123234317](第二章-kafka高级.assets/image-20211212123234317.png)
+
+
+
+4. 如果向消费组中添加更多的消费者，超过主题分区数量，则有一部分消费者就会闲置，不会接收任何消息（**最好不要这样做**）
+
+​		![image-20211212123308733](第二章-kafka高级.assets/image-20211212123308733.png)
+
+> 向消费组添加消费者是横向扩展消费能力的主要方式。
+> 必要时，需要为主题创建大量分区，在负载增长时可以加入更多的消费者。但是不要让消费者的数量超过主题分区的数量。
 
 
 
@@ -268,12 +302,14 @@ Kafka 从 0.11 版本开始引入了事务支持。事务可以保证 Kafka 在 
 
 
 ## Producer 事务
+
 为了实现跨分区跨会话的事务，需要引入一个全局唯一的 Transaction ID，并将 Producer获得的PID 和Transaction ID 绑定。这样当Producer 重启后就可以通过正在进行的 Transaction
 ID 获得原来的 PID。为了管理 Transaction， Kafka 引入了一个新的组件 Transaction Coordinator。 Producer 就是通过和 Transaction Coordinator 交互获得 Transaction ID 对应的任务状态。 TransactionCoordinator 还负责将事务所有写入 Kafka 的一个内部 Topic，这样即使整个服务重启，由于事务状态得到保存，进行中的事务状态可以得到恢复，从而继续进行。
 
 
 
 ## Consumer 事务
+
 上述事务机制主要是从 Producer 方面考虑，对于 Consumer 而言，事务的保证就会相对较弱，尤其时无法保证 Commit 的信息被精确消费。这是由于 Consumer 可以通过 offset 访
 问任意信息，而且不同的 Segment File 生命周期不同，同一事务的消息可能会出现重启后被删除的情况。
 
@@ -300,7 +336,7 @@ Kafka 的 Producer 发送消息采用的是**异步发送**的方式。在消息
 
 
 
-### 代码案例
+### 代码案例 -- 异步带回调函数
 
 > 刚开始连接一直是连接的本地kafka，去服务器修改server.properties ,添加如下内容
 >
@@ -354,4 +390,410 @@ Kafka 的 Producer 发送消息采用的是**异步发送**的方式。在消息
 
 > 代码如下：https://gitee.com/gadeGG/ProjectCode/tree/master/SpringBootLearn/Kafka-Product
 
+
+
+### 代码案例 -- 同步投递（了解）
+
+同步发送的意思就是，一条消息发送之后，会阻塞当前线程， 直至返回 ack。由于 send 方法返回的是一个 Future 对象，根据 Futrue 对象的特点，我们也可以实现同步发送的效果，只需在调用 Future 对象的 get 方发即可。
+
+```java
+#上面代码不变，发送数据时修改如下：
+  //发送数据
+  Producer<String, String> producer = new KafkaProducer<>(properties);
+
+for (int i=0;i<10;i++){
+  Future<RecordMetadata> message = producer.send(new ProducerRecord<>("first", "first-value" + i));
+  //线程阻塞获取数据，
+  message.get();
+}
+```
+
+
+
+
+
+
+
 ## Consumer API
+
+> Consumer 消费数据时的可靠性是很容易保证的，因为数据在 Kafka 中是持久化的，故不用担心数据丢失问题。由于 consumer 在消费过程中可能会出现断电宕机等故障， consumer 恢复后，需要从故障前的位置的继续消费，所以 consumer 需要实时记录自己消费到了哪个 offset，以便故障恢复后继续消费。所以 offset 的维护是 Consumer 消费数据是必须考虑的问题。
+>
+> 对于消费者而言，offset维护是必须的，因此kafka提供了自动提交offset的参数，如下：
+>
+> * enable.auto.commit： 是否开启自动提交 offset 功能
+> * auto.commit.interval.ms： 自动提交 offset 的时间间隔
+
+
+
+### offset重置
+
+offset对于消费者而言，记录了消费数据的顺序，方便消费者宕机或者重启后继续消费。那如果一个消费者宕机时offset记录的为10，过了八年后重启，数据已经删除或者消费者换了消费者组，如何能够消费漏掉的消息呢？使用offset重置可以达到消费历史数据。**但是注意：消费的历史数据只能是没有删除的，默认7天，即可以消费7天前的历史数据**
+
+
+
+### 如何消费历史数据
+
+使用offset重置 + 换组
+
+![image-20211212131222648](第二章-kafka高级.assets/image-20211212131222648.png)
+
+
+
+### 代码案例 -- 自动提交offset
+
+```java
+public static void main(String[] args) {
+        Properties properties = new Properties();
+
+        //连接kafka
+        properties.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "192.168.31.98:9092");
+        //加入到消费者组
+        properties.put(ConsumerConfig.GROUP_ID_CONFIG, "group-1");
+        //自动提交offset
+        properties.put(ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, "true");
+        //offset提交间隔
+        properties.put(ConsumerConfig.AUTO_COMMIT_INTERVAL_MS_CONFIG, "1000");
+
+        //Key,Value的序列化类
+        properties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+        properties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+
+        //创建消费者
+        KafkaConsumer<String, String> consumer = new KafkaConsumer<>(properties);
+        //消费者订阅主题
+        consumer.subscribe(Arrays.asList("first","second"));
+        //拉取主题数据
+        while (true) {
+            //轮询拉取数据，100ms避免长时间空转
+            ConsumerRecords<String, String> records = consumer.poll(1000);
+            for (ConsumerRecord<String, String> record : records){
+                System.out.printf("offset = %d, key = %s, value = %s%n", record.offset(), record.key(), record.value());
+            }
+        }
+
+    }
+```
+
+
+
+> `问题 ：`虽然自动提交帮我们带来了遍历，但是其根据时间进行提交，很难把握提交时间，如果消息正在处理的时候提交offset ，并且此刻消费者发生了服务器宕机，就会导致消息漏消费问题。
+>
+> `提交offset 本质 ：`消费者启动后，将offset从kafka中加载到内存中，消费后提交offset就会回写到kafka中。下次启动继续从kafka中读取offset继续消费
+
+### 代码案例 -- 手动提交offset(建议使用)
+
+> 手动提交 offset 的方法有两种：分别是 **commitSync（同步提交）** 和 **commitAsync（异步提交）** 。两者的相同点是，都会将本次 poll 的一批数据最高的偏移量提交；不同点是，commitSync 阻塞当前线程，一直到提交成功，并且**会自动失败重试**（由不可控因素导致，也会出现提交失败）；而 commitAsync 则没有失败重试机制，故有可能提交失败。
+
+```java
+//手动提交offset
+properties.put(ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, "false");
+```
+
+#### 代码案例 -- 同步提交
+
+```java
+public static void main(String[] args) {
+  Properties properties = new Properties();
+
+  properties.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "192.168.31.98:9092");
+  properties.put(ConsumerConfig.GROUP_ID_CONFIG, "group-1");
+  // TODO: 2021/12/12  关闭自动提交offset
+  properties.put(ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, "false");
+  properties.put(ConsumerConfig.AUTO_COMMIT_INTERVAL_MS_CONFIG, "1000");
+
+  properties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+  properties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+
+  KafkaConsumer<String, String> consumer = new KafkaConsumer<>(properties);
+  consumer.subscribe(Arrays.asList("first","second"));
+  while (true) {
+    ConsumerRecords<String, String> records = consumer.poll(100);
+    for (ConsumerRecord<String, String> record : records){
+      System.out.printf("offset = %d, key = %s, value = %s%n", record.offset(), record.key(), record.value());
+    }
+    // TODO: 2021/12/12 同步提交 
+    consumer.commitSync();
+  }
+
+}
+```
+
+
+
+#### 代码案例 -- 异步提交
+
+```java
+ public static void main(String[] args) {
+        Properties properties = new Properties();
+
+        properties.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, "192.168.31.98:9092");
+        properties.put(ConsumerConfig.GROUP_ID_CONFIG, "group-1");
+        // TODO: 2021/12/12  关闭自动提交offset
+        properties.put(ConsumerConfig.ENABLE_AUTO_COMMIT_CONFIG, "false");
+        properties.put(ConsumerConfig.AUTO_COMMIT_INTERVAL_MS_CONFIG, "1000");
+
+        properties.put(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+        properties.put(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class.getName());
+
+        KafkaConsumer<String, String> consumer = new KafkaConsumer<>(properties);
+        consumer.subscribe(Arrays.asList("first","second"));
+        while (true) {
+            ConsumerRecords<String, String> records = consumer.poll(100);
+            for (ConsumerRecord<String, String> record : records){
+                System.out.printf("offset = %d, key = %s, value = %s%n", record.offset(), record.key(), record.value());
+            }
+            // TODO: 2021/12/12 异步提交
+            consumer.commitAsync(new OffsetCommitCallback() {
+                @Override
+                public void onComplete(Map<TopicPartition, OffsetAndMetadata> map, Exception e) {
+                    if ( e!= null) {
+                        System.err.println("Commit failed for"+map);
+                    }
+                }
+            });
+            consumer.commitSync();
+        }
+
+    }
+```
+
+
+
+> `问题：`无论是同步提交还是异步提交，都是发生在消息消费后进行提交offset，相较自动提交和消息消费同时处理而言，提高了可靠性。但是也不能排除消息消费后在提交的时候发生网络或者服务器故障，导致offset没有刷新到kafka，致使消息重复消费。
+
+
+
+
+
+### 代码案例 -- 自定义存储offset(高并发下使用)
+
+> 上面我们讲到，无论是自动提交还是手动提交，都有可能发生漏消费消息和消息重复消费问题。因此kafka官网给出自定义存储方案，自定义存储方案可以将消费数据和提交offset同事务，从而解决offset一致性问题。
+
+```java
+# baidu
+```
+
+
+
+## 拦截器（针对生产者）
+
+Producer 拦截器(interceptor)是在 Kafka 0.10 版本被引入的，主要用于实现 clients 端的定制化控制逻辑。对于 producer 而言， interceptor 使得用户在消息发送前以及 producer 回调逻辑前有机会对消息做一些定制化需求，比如修改消息等。同时， **producer 允许用户指定多个 interceptor按序作用于同一条消息从而形成一个拦截链(interceptor chain)**。 Intercetpor 的实现接口是org.apache.kafka.clients.producer.ProducerInterceptor，其定义的方法包括：
+
+* configure(configs )   
+
+	获取配置信息和初始化数据时调用。
+
+* onSend(ProducerRecord)：
+	该方法封装进 KafkaProducer.send 方法中，即它运行在用户主线程中。 **Producer 确保在消息被序列化以及计算分区前调用该方法。 用户可以在该方法中对消息做任何操作，但最好保证不要修改消息所属的 topic 和分区， 否则会影响目标分区的计算。**
+
+* onAcknowledgement(RecordMetadata, Exception)
+
+	该方法会在消息从 RecordAccumulator 成功发送到 Kafka Broker 之后，或者在发送过程中失败时调用。 并且通常都是在 producer 回调逻辑触发之前。 onAcknowledgement 运行在producer 的 IO 线程中，因此不要在该方法中放入很重的逻辑，否则会拖慢 producer 的消息发送效率。
+
+* close
+
+	关闭 interceptor，主要用于执行一些资源清理工作，只调用一次。**拦截器中的close方法，是producer.close();的时候才会调用拦截器中的close，因此生产环境中需要注意这一块。**
+
+> * 另外倘若指定了多个 interceptor，则 producer 将按照指定顺序调用它们，并仅仅是捕获每个 interceptor 可能抛出的异常记录到错误日志中而非在向上传递。这在使用过程中要特别留意。
+>
+> * 拦截器针对于生产者发送消息到Broker时进行拦截处理，如果一次只发送一条消息，那么拦截器就只对这一条数据处理，如果一次发送N个消息，拦截器就对这N个消息进行拦截处理
+> * 如上四个拦截器方法依次执行，close只执行一次。
+
+
+
+
+
+# 拦截器案例
+
+> `需求 ： `增加两个连接器，第一个拦截器负责将发出的消息增加时间戳，第二个拦截器统计生产者发送一批数据成功的数量和失败的数量
+
+1. 增加时间拦截器
+
+	```java
+	ProducerRecord
+	public class TimeInterceptor implements ProducerInterceptor<String,String> {
+	    @Override
+	    public void configure(Map<String, ?> map) {
+	
+	    }
+	    @Override
+	    public ProducerRecord<String, String> onSend(ProducerRecord<String, String> record) {
+	        // 没有给ProducerRecord设值的方法，因此只能创建一个新的 record，把时间戳写入消息体的最前部，
+	        return new ProducerRecord(record.topic(), record.partition(), record.timestamp(), record.key(),
+	                System.currentTimeMillis() + "," + record.value().toString());
+	    }
+	
+	    @Override
+	    public void onAcknowledgement(RecordMetadata recordMetadata, Exception e) {
+	
+	    }
+	
+	    @Override
+	    public void close() {
+	
+	    }
+	    
+	}
+	```
+
+2. 增加消息统计拦截器
+
+	```java
+	public class CountInterceptor implements ProducerInterceptor<String,String> {
+	    private AtomicInteger errorCounter = new AtomicInteger(0);
+	    private AtomicInteger successCounter = new AtomicInteger(0);
+	
+	    @Override
+	    public void configure(Map<String, ?> map) {
+	        
+	    }
+	
+	    @Override
+	    public ProducerRecord<String, String> onSend(ProducerRecord<String, String> producerRecord) {
+	        // TODO: 2021/12/12 返回原值，否则就成了过滤器
+	        return producerRecord;
+	    }
+	
+	    @Override
+	    public void onAcknowledgement(RecordMetadata recordMetadata, Exception e) {
+	        // TODO: 2021/12/12  统计成功和失败的次数
+	        if (e == null) {
+	            successCounter.incrementAndGet();
+	        } else {
+	            errorCounter.incrementAndGet();
+	        }
+	    }
+	
+	    @Override
+	    public void close() {
+	        // 保存结果
+	        System.out.println("Successful sent: " + successCounter.get());
+	        System.out.println("Failed sent: " + errorCounter.get());
+	    }
+	
+	}
+	```
+
+3. 生产者添加拦截器
+
+	```java
+	    @SneakyThrows
+	    public static void main(String[] args) {
+	        Properties properties = new Properties();
+	        properties.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, "192.168.31.98:9092");
+	        properties.put(ProducerConfig.ACKS_CONFIG, "all");
+	        properties.put(ProducerConfig.RETRIES_CONFIG, 1);
+	        properties.put(ProducerConfig.BATCH_SIZE_CONFIG, 16384);
+	        properties.put(ProducerConfig.LINGER_MS_CONFIG, 1);
+	        properties.put(ProducerConfig.BATCH_SIZE_CONFIG, 33554432);
+	        properties.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringSerializer");
+	        properties.put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringSerializer");
+	
+	        // TODO: 2021/12/12 设置拦截链
+	        properties.put(ProducerConfig.INTERCEPTOR_CLASSES_CONFIG, Arrays.asList(TimeInterceptor.class,CountInterceptor.class));
+	        
+	        //发送数据
+	        Producer<String, String> producer = new KafkaProducer<>(properties);
+	
+	        for (int i = 0; i < 10; i++) {
+	            producer.send(new ProducerRecord<String, String>("first", "key--"+i, "value--"+i), new Callback() {
+	                @Override
+	                public void onCompletion(RecordMetadata recordMetadata, Exception e) {
+	                    //成功返回recordMetadata，失败返回Exception
+	                    if (e == null) {
+	                        System.out.println("topic: " + recordMetadata.topic());
+	                    }
+	                }
+	            });
+	        }
+	        // TODO: 2021/12/12 一定要关闭生产者，否则拦截器中close不会执行。如果是while轮询发送消息，则使用try finally 
+	        producer.close();
+	    }
+	```
+
+4. 测试
+
+	* 启动消费者cmd
+	* 启动生产者代码
+
+	![image-20211212190017491](第二章-kafka高级.assets/image-20211212190017491.png)
+
+	![image-20211212190028657](第二章-kafka高级.assets/image-20211212190028657.png)
+
+
+
+
+
+
+
+# kafka监控 -Eagle
+
+> Eagle通过JMX方式拉取kafka数据，因此需要开启JMX
+
+1. 修改 kafka-server-start.sh 命令中
+
+	```bash
+	if [ "x$KAFKA_HEAP_OPTS" = "x" ]; then
+	export KAFKA_HEAP_OPTS="-Xmx1G -Xms1G"
+	fi
+	```
+
+	为
+
+	```bash
+	if [ "x$KAFKA_HEAP_OPTS" = "x" ]; then
+	export KAFKA_HEAP_OPTS="-server -Xms2G -Xmx2G -XX:PermSize=128m
+	-XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:ParallelGCThreads=8 -
+	XX:ConcGCThreads=5 -XX:InitiatingHeapOccupancyPercent=70"
+	export JMX_PORT="9999"
+	#export KAFKA_HEAP_OPTS="-Xmx1G -Xms1G"
+	fi
+	```
+
+2. 下载kafka-eagle-bin-1.3.7.tar.gz 并tar -zxvf解压缩
+
+3. 设置eagle环境变量
+
+	```bash
+	export KE_HOME=/opt/eagle-2.0.8/
+	export PATH=$PATH:$KE_HOME/bin
+	```
+
+4. 修改eagle  conf/system-config.properties 
+
+	```bash
+	#去掉集群相关配置，cluster2
+	efak.zk.cluster.alias=cluster1
+	cluster1.zk.list=localhost:2181
+	#cluster2.efak.offset.storage=zk
+	efak.metrics.charts=true
+	
+	#信息可以存储在MySQL中，那么下面内容改为MySQL配置信息
+	######################################
+	# kafka sqlite jdbc driver address
+	######################################
+	kafka.eagle.driver=org.sqlite.JDBC
+	kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
+	kafka.eagle.username=root
+	kafka.eagle.password=www.kafka-eagle.org
+	
+	# MySQL连接信息
+	kafka.eagle.driver=com.mysql.jdbc.Driver
+	kafka.eagle.url=jdbc:mysql://hadoop102:3306/eagle?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+	kafka.eagle.username=root
+	kafka.eagle.password=root
+	```
+
+5. 启动相关命令
+
+	```bash
+	./ke.sh status   
+	./ke.sh start
+	./ke.sh stop
+	```
+
+6. 访问
+
+	![image-20211212200425555](第二章-kafka高级.assets/image-20211212200425555.png)
+
+	
